# leCore

./: .dockerignore  .gitignore  ABLATIONS.md  API_QUICKREF.md  AWS_X402_DEPLOY.md  CAPABILITIES.md  DEVELOPMENT_STRATEGY.md  Dockerfile.x402  FEATURE_GUIDE.md  FLY_X402_DEPLOY.md  GALLERY.md  ISA.md  MANIFEST.in  Makefile  NOTES_concepts.md  PACKAGING.md  PANEL_occlusion_speed_backlog.md  PRODUCT.md  README.md  REFERENCE.md  RENDERING_GUIDE.md  RENDER_PIPELINE_BACKLOG.md  SERVICE.md  THEORY.md  WIRING_BACKLOG.md  X402_API.md  aniso_router_probe.py  apiquickref.py  app.py  bench_batch.py  bench_dictionary_compression.py  bench_fig.py  bench_sprites.py  bench_vs_jpeg.py  benchmark_holographic.py  build_package.sh  cached_dome_probe.py  capabilities.json  capdoc.py  docgen.py  (+783 more)
archive/: bench_batch.py  bench_fig.py  bench_sprites.py  bench_vs_jpeg.py  exp_archive.py  exp_creature_viz.py  exp_critique.py  exp_film.py  exp_film2.py  exp_index.py  exp_multiplex.py  exp_outlier.py  exp_quant.py  exp_quant2.py
benchmarks/: README.md  bench_compression.py  bench_dictionary_compression.py  bench_recall.py  bench_render.py  benchmark_holographic.py
c/: Makefile  README.md
current backlogs/: RENDER_PIPELINE_BACKLOG.md  holostuff_composability_backlog.md  holostuff_output_quality_backlog.md  leCore_improvements_and_integration_backlog.md  leCore_wet_cloth_wicking_backlog.md
data/: dai_weth_big.json  dai_weth_ohlcv.json  sol_5min.npz
docs/: BACKLOG.md  BACKLOG_holographic_research.md  CLIENT_INTEGRATION_BACKLOG.md  CONVENTIONS.md  DESIGN_holographic_bake.md  DOC_MAP.md  FACULTY_MAP.md  HOLOGRAPHIC_FUNCTIONS.md  HOLOGRAPHIC_INCEPTION.md  IO_KINDS.md  ISA_EXTENSIONS.md  ISA_REVERSIBLE.md  MOBIUS_AND_STRUCTURE.md  NOTES_concepts.md  OPEN_ITEMS.md  PACKAGING.md  PIPELINE_MAP.md  SDF_COOKBOOK.md  SEMANTIC_BACKLOG.md  SEMANTIC_CAPABILITY.md  SEMANTIC_TAXONOMY.md  UNIFIERS.md  holostuff_dataset_benchmark_program.md  researchLog.md
features/: sprites.hsp
lecore_data/: __init__.py
reorg_output/: reorg_plan.json
scripts/: README.md  align_models.py  distill_map.py  distill_router.py  export_index.py  knowledge_index.py  lecore_agent.py  lecore_paths.py  lint_scripts.py  llm_census.py  model_analysis_program.py  nomic_forward.py  nomic_vision_census.py  qwen_config_probe.py  (+4 more)
(+1154 files in other folders)
